fix page layout issues

--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -16,15 +16,28 @@ img {
 .courier-date {
     font-family: 'Courier New', Courier, monospace;
     font-size: 0.9em;
+    margin-top: 8px;
+    padding-bottom: 6px;
 }
 
 .frontmatter {
     margin-bottom: 20px;
 }
 
+p {
+    line-height: 1.6em;
+}
+
+.subtitle {
+    margin: 0 0;
+}
+
+.italic {
+    font-style: italic;
+}
 
 @media screen and (max-width: 880px) {
     .page-content {
-        padding: 0px 10%;
+        margin: 0px 10%;
     }
 }
